# Raytracer

./: .gitignore  CMakeLists.txt  Makefile  color.h  image.ppm  main  main.cpp  ray.h  vec3.h
